# reactive-adaptive-test-framework

./: .gitignore  README.md
qa-intelligent-pms/: .env.configurado  .env.example  .gitignore  Cargo.toml  README-QUICK-START.md  README.md  clippy.toml  ruff.toml  rustfmt.toml  setup1  test_jira.sh  test_report.html  test_report_check.html
qa-intelligent-pms/.github/workflows/: ci.yml
qa-intelligent-pms/configs/: component_mappings.yaml  jira_config.yaml.example  postman_config.yaml  postman_config.yaml.example  splunk_config.yaml.example  testmo_config.yaml.example
qa-intelligent-pms/crates/qa-pms-ai/: Cargo.toml
qa-intelligent-pms/crates/qa-pms-ai/src/: anomaly_detector.rs  anomaly_repository.rs  bug_predictor.rs  chat.rs  error.rs  gherkin.rs  lib.rs  provider.rs  semantic.rs  test_generator.rs  types.rs
qa-intelligent-pms/crates/qa-pms-api/: Cargo.toml
qa-intelligent-pms/crates/qa-pms-api/src/: app.rs  health_scheduler.rs  lib.rs  main.rs  startup.rs  user_config_health.rs
qa-intelligent-pms/crates/qa-pms-api/tests/: request_id_integration_test.rs  setup_integration_test.rs  shutdown_test.rs  smoke_test.rs
qa-intelligent-pms/crates/qa-pms-config/: Cargo.toml
qa-intelligent-pms/crates/qa-pms-config/src/: encryption.rs  lib.rs  settings.rs  user_config.rs
qa-intelligent-pms/crates/qa-pms-core/: Cargo.toml
qa-intelligent-pms/crates/qa-pms-core/src/: auth.rs  cache.rs  error.rs  health.rs  health_store.rs  keywords.rs  lib.rs  test_case_repository.rs
qa-intelligent-pms/crates/qa-pms-dashboard/: Cargo.toml
qa-intelligent-pms/crates/qa-pms-dashboard/src/: error.rs  lib.rs  metrics.rs  period.rs  types.rs
qa-intelligent-pms/crates/qa-pms-integration-health/: Cargo.toml
qa-intelligent-pms/crates/qa-pms-integration-health/src/: error.rs  lib.rs  repository.rs  service.rs  types.rs
qa-intelligent-pms/crates/qa-pms-jira/: Cargo.toml
qa-intelligent-pms/crates/qa-pms-jira/src/: error.rs  health.rs  lib.rs  oauth.rs  pkce.rs  tickets.rs  token_refresh.rs  token_store.rs
qa-intelligent-pms/crates/qa-pms-patterns/: Cargo.toml
qa-intelligent-pms/crates/qa-pms-patterns/src/: alerts.rs  detector.rs  lib.rs  repository.rs  types.rs
qa-intelligent-pms/crates/qa-pms-postman/: Cargo.toml
qa-intelligent-pms/crates/qa-pms-postman/src/: client.rs  error.rs  health.rs  lib.rs  types.rs
qa-intelligent-pms/crates/qa-pms-splunk/: Cargo.toml
qa-intelligent-pms/crates/qa-pms-splunk/src/: error.rs  lib.rs  templates.rs  types.rs
qa-intelligent-pms/crates/qa-pms-support/: Cargo.toml
qa-intelligent-pms/crates/qa-pms-support/src/: diagnostics.rs  error.rs  knowledge_base.rs  lib.rs  repository.rs  types.rs
qa-intelligent-pms/crates/qa-pms-testmo/: Cargo.toml
qa-intelligent-pms/crates/qa-pms-testmo/src/: client.rs  error.rs  health.rs  lib.rs  types.rs
qa-intelligent-pms/crates/qa-pms-time/: Cargo.toml
qa-intelligent-pms/crates/qa-pms-time/src/: aggregates.rs  lib.rs  repository.rs  types.rs
qa-intelligent-pms/crates/qa-pms-tracking/: Cargo.toml
qa-intelligent-pms/crates/qa-pms-tracking/src/: error.rs  lib.rs  service.rs
qa-intelligent-pms/crates/qa-pms-workflow/: Cargo.toml
qa-intelligent-pms/crates/qa-pms-workflow/src/: lib.rs  repository.rs  seeding.rs  types.rs
qa-intelligent-pms/data/: testmo-openapi-schema.json  testmo-resources-complete.json
qa-intelligent-pms/data/metrics/history/: endpoint_+CSCOE+_logon_forms.js.json  endpoint_+CSCOE+_transfer.js.json  endpoint_+CSCOL+_Java.jar.json  endpoint_+CSCOL+_a1.jar.json  endpoint_,.json  endpoint_.._2F.._2F.._2Fetc_2Fpasswd_return_type_html.json  endpoint_.git_config.json  endpoint_.json  endpoint_.well-known_.well-known_cc.php.json  endpoint_.well-known_acme-challenge_parx.php.json  endpoint_.well-known_dropdown.php.json  (+36580 more)
qa-intelligent-pms/data/splunk_exports/: 19-12-25-21h.json  301225.json  4D-JSON.json  6h-2025-12-10.json  LEO.json  query_splunk_6H-14-12-2025-6H-JSON.json
qa-intelligent-pms/docs/: 01-architecture.md  02-technical-decisions.md  03-data-models.md  04-workflows.md  05-integrations.md  06-setup-guide.md  07-roadmap.md  08-interface-web.md  COMO-FUNCIONA-PROCESSAMENTO.md  CONCEPT-AND-OVERVIEW.html  CONCEPT-AND-OVERVIEW.md  GUIA-EXPORTACAO-SPLUNK.md  GUIA-USUARIO-FINAL.md  HUMANO-NO-LOOP.md  PROJECT-CONCEPT.md  PROJECT-DOCUMENTATION.md  ROADMAP-2026.md  STATUS-ATUAL.md  TESTES-INTEGRACOES.md  TESTMO-CLI-INTEGRACAO.md  TESTMO-ESTRATEGIA-COMPLETA.md  TESTMO-NOMENCLATURA-ESTRUTURA.md  TESTMO-PLANO-IMPLEMENTACAO.md  TESTMO-RECURSOS-COMPLETOS.md  bmm-workflow-status.yaml  index.md  project-overview.md  project-scan-report.json  source-tree-analysis.md  technology-stack.md
qa-intelligent-pms/frontend/: package-lock.json  package.json
qa-intelligent-pms/frontend/src/: App.tsx  index.css
qa-intelligent-pms/migrations/: 20260103000001_initial_schema.sql  20260104000001_workflow_schema.sql  20260104000002_time_tracking_schema.sql  20260104000003_reports_schema.sql  20260105000001_pattern_detection_schema.sql  20260105000002_time_aggregates_schema.sql  20260105000003_splunk_templates_schema.sql  20260105000004_support_schema.sql  20260105000005_ai_config_schema.sql  20260107000006_ai_configs_fix_storage.sql  20260110033607_create_anomalies_table.sql  20260110140000_create_test_cases_table.sql  20260111030835_create_integration_health_tables.sql  20260112002754_fix_integration_health_constraints_and_triggers.sql
qa-intelligent-pms/scripts/: analyze_reactive_metrics.py  check_code.py  check_splunk_permissions.py  example_minimal.py  explore_testmo_docs.py  format_code.py  generate_html_report.py  get_reactive_metrics.py  process_splunk_export.py  run_preventive.py  setup.sh  test_data_processing.py  test_full_flow.py  test_integrations.py  test_jira_connection.py  test_postman_connection.py  test_postman_web_integration.py  test_report_generation.py  test_splunk_connection.py  test_splunk_rest_api.py  test_testmo_cli.py  test_testmo_web_integration.py  test_web_integrations_e2e.py  testar_criar_projeto_testmo.py  verificar_credenciais_testmo.py  verificar_endpoint_projects_testmo.py
(+386 files in other folders)
