[package]
name = "qa-pms-core"
description = "Shared types, traits, and utilities for QA Intelligent PMS"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
axum = ["dep:axum", "dep:utoipa"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

# Optional: for IntoResponse implementation
axum = { workspace = true, optional = true }
utoipa = { workspace = true, optional = true }

# Database repository implementation
sqlx = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }

[lints]
workspace = true
