[package]
name = "qa-pms-jira"
description = "Jira integration for QA Intelligent PMS"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
qa-pms-core = { workspace = true }
qa-pms-config = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
oauth2 = { workspace = true }
tokio = { workspace = true }
secrecy = { workspace = true }

# PKCE / OAuth utilities
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
urlencoding = "2.1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }

[lints]
workspace = true
