[package]
name = "qa-pms-patterns"
version = "0.1.0"
edition = "2021"
description = "Pattern detection and proactive alerts for QA PMS"

[dependencies]
# Async runtime
tokio = { version = "1.44", features = ["time", "sync"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.16", features = ["v4", "serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.44", features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true